--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <script src="colormode.js"></script>
   </head>
   <body>
+    <header class="header_navbar">
+      <img src="G_d.png" class="image" />
+      <navbar class="navbar">
+        <li class="navbar_button">Quien Soy</li>
+        <li class="navbar_button">Proyectos</li>
+        <li class="navbar_button">Contacto</li>
+      </navbar>
+      <button class="navbar_mobile">-----</button>
+    </header>
     <h1>les gooaaa</h1>
+    <h2>les gooaaa</h2>
+    <h3>les gooaaa</h3>
     <button onclick="colorMode()">Color Mode</button>
   </body>
 </html>
