finnished trabajos section layout

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <section id="home" class="full-height landing-display back">
       <div>
-        <h1 class="fade title">Midas</h1>
-        <h2 class="fade_slow title">Piscinas</h2>
+        <h1 class="fade">Midas</h1>
+        <h2 class="fade_slow">Piscinas</h2>
       </div>
       <img
         src="/public/img/analisis.jpeg"
@@ -77,112 +77,124 @@
       </div>
     </section>
 
-    <section id="trabajos">
-      <h2>Trabajos Realizados</h2>
-      <div>
-        <div>
-          <img src="" />
-          <p>Piscinas</p>
+    <section id="trabajos" class="full-height">
+      <h2 class="center-text title">Trabajos Realizados</h2>
+      <div class="three-flex">
+        <div class="card">
+          <img src="public/img/analisis.jpeg" />
+          <p class="card-title">Piscinas</p>
         </div>
-        <div>
-          <img src="" />
-          <p>Liner</p>
+        <div class="card">
+          <img src="public/img/analisis.jpeg" />
+          <p class="card-title">Liner</p>
         </div>
-        <div>
-          <img src="" />
-          <p>Jacuzzis</p>
+        <div class="card">
+          <img src="public/img/analisis.jpeg" />
+          <p class="card-title">Jacuzzis</p>
         </div>
       </div>
 
-      <div>
-        <div>
-          <h2>Piscinas</h2>
-          <p>
-            Somos una empresa con una dilatada trayectoria construyendo,
-            reparando y rehabilitando piscinas de todo tipo, dando soluciones a
-            todos los retos que nuestros clientes nos plantean, adaptándonos a
-            sus necesidades. Un trato cercano y profesional es nuestro fuerte.
-            Somos expertos tematizadores construyendo para usted cascadas,
-            toboganes, jacuzzis y conjuntos temáticos que harán un rincón de
-            ensueño de su piscina jardín.
-          </p>
+      <section class="sub-section">
+        <div class="slider-card-flex-2">
+          <div>
+            <h2>Piscinas</h2>
+            <p>
+              Somos una empresa con una dilatada trayectoria construyendo,
+              reparando y rehabilitando piscinas de todo tipo, dando soluciones
+              a todos los retos que nuestros clientes nos plantean, adaptándonos
+              a sus necesidades. Un trato cercano y profesional es nuestro
+              fuerte. Somos expertos tematizadores construyendo para usted
+              cascadas, toboganes, jacuzzis y conjuntos temáticos que harán un
+              rincón de ensueño de su piscina jardín.
+            </p>
+          </div>
+          <img src="/public/img/analisis.jpeg" alt="midas-piscinas-vision" />
         </div>
-        <img src="/as" alt="midas-piscinas-vision" />
-      </div>
-      <div>
-        <img src="" alt="midas-piscinas-vision" />
-        <div>
-          <h2>Liner</h2>
-          <p>
-            Somos una empresa con una dilatada trayectoria construyendo,
-            reparando y rehabilitando piscinas de todo tipo, dando soluciones a
-            todos los retos que nuestros clientes nos plantean, adaptándonos a
-            sus necesidades. Un trato cercano y profesional es nuestro fuerte.
-            Somos expertos tematizadores construyendo para usted cascadas,
-            toboganes, jacuzzis y conjuntos temáticos que harán un rincón de
-            ensueño de su piscina jardín.
-          </p>
+        <div class="slider-card-flex-2">
+          <img src="/public/img/analisis.jpeg" alt="midas-piscinas-vision" />
+          <div>
+            <h2>Liner</h2>
+            <p>
+              Somos una empresa con una dilatada trayectoria construyendo,
+              reparando y rehabilitando piscinas de todo tipo, dando soluciones
+              a todos los retos que nuestros clientes nos plantean, adaptándonos
+              a sus necesidades. Un trato cercano y profesional es nuestro
+              fuerte. Somos expertos tematizadores construyendo para usted
+              cascadas, toboganes, jacuzzis y conjuntos temáticos que harán un
+              rincón de ensueño de su piscina jardín.
+            </p>
+          </div>
         </div>
-      </div>
-      <div>
-        <div>
-          <h2>Jacuzzis</h2>
-          <p>
-            Somos una empresa con una dilatada trayectoria construyendo,
-            reparando y rehabilitando piscinas de todo tipo, dando soluciones a
-            todos los retos que nuestros clientes nos plantean, adaptándonos a
-            sus necesidades. Un trato cercano y profesional es nuestro fuerte.
-            Somos expertos tematizadores construyendo para usted cascadas,
-            toboganes, jacuzzis y conjuntos temáticos que harán un rincón de
-            ensueño de su piscina jardín.
-          </p>
+        <div class="slider-card-flex-2">
+          <div>
+            <h2>Jacuzzis</h2>
+            <p>
+              Somos una empresa con una dilatada trayectoria construyendo,
+              reparando y rehabilitando piscinas de todo tipo, dando soluciones
+              a todos los retos que nuestros clientes nos plantean, adaptándonos
+              a sus necesidades. Un trato cercano y profesional es nuestro
+              fuerte. Somos expertos tematizadores construyendo para usted
+              cascadas, toboganes, jacuzzis y conjuntos temáticos que harán un
+              rincón de ensueño de su piscina jardín.
+            </p>
+          </div>
+          <img src="/public/img/analisis.jpeg" alt="midas-piscinas-vision" />
         </div>
-        <img src="" alt="midas-piscinas-vision" />
-      </div>
+      </section>
     </section>
 
-    <section id="galeria">
+    <section id="galeria full-height">
       <h2>Galería</h2>
     </section>
 
     <section id="contacto">
       <h2>Contacto</h2>
 
-      <form id="contact-form">
-        <label for="nombre">Nombre:</label>
-        <input
-          type="text"
-          name="nombre"
-          placeholder="Midas Piscinas"
-          required
-        />
-        <label for="movil">Teléfono:</label>
-        <input
-          type="tel"
-          name="movil"
-          placeholder="649-320-241"
-          pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"
-          required
-        />
-        <label for="mail">e-mail:</label>
-        <input
-          type="email"
-          name="mail"
-          placeholder="gestion@midaspiscinas.com"
-          required
-        />
-        <label for="consulta">Consulta:</label>
-        <input
-          type="text-area"
-          name="consulta"
-          placeholder="Mi consulta es..."
-          required
-        />
-        <input type="checkbox" required name="privacy" />
-        <label for="provacy"
-          >He leído y acepto la
-          <a href="/politica.html">política de Privacidad</a></label
-        >
+      <form id="contact-form" class="contacto">
+        <div>
+          <label for="nombre">Nombre:</label>
+          <input
+            type="text"
+            name="nombre"
+            placeholder="Midas Piscinas"
+            required
+          />
+        </div>
+        <div>
+          <label for="movil">Teléfono:</label>
+          <input
+            type="tel"
+            name="movil"
+            placeholder="649-320-241"
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"
+            required
+          />
+        </div>
+        <div>
+          <label for="mail">e-mail:</label>
+          <input
+            type="email"
+            name="mail"
+            placeholder="gestion@midaspiscinas.com"
+            required
+          />
+        </div>
+        <div>
+          <label for="consulta">Consulta:</label>
+          <input
+            type="text-area"
+            name="consulta"
+            placeholder="Mi consulta es..."
+            required
+          />
+        </div>
+        <div>
+          <input type="checkbox" required name="privacy" />
+          <label for="privacy"
+            >He leído y acepto la
+            <a href="/politica.html">política de Privacidad</a></label
+          >
+        </div>
         <input type="submit" value="Enviar" />
       </form>
 
@@ -200,7 +212,5 @@
         reservados.</small
       >
     </footer>
-
-    <script src="" async defer></script>
   </body>
 </html>
